# str-to-flags

./: Cargo.toml  README.md  TODO.md
src/: lib.rs  str_flags.rs  traits.rs
tests/: tests_128.rs  tests_16.rs  tests_32.rs  tests_64.rs  tests_8.rs
