[package]
name = "str-to-flags"
version = "0.10.0"
edition = "2021"

[dependencies]
arctan-bitflags = { git = "https://github.com/ArchTangent/arctan-bitflags.git", branch = "main", optional = true }

[dev-dependencies]
arctan-bitflags = { git = "https://github.com/ArchTangent/arctan-bitflags.git", branch = "main" }
str-to-flags = { path = ".", features = ["bitflags-support"] }

[features]
bitflags-support = ["arctan-bitflags"]
